# CH58X_CMake

./: CHCompilers.cmake  CMakeLists.txt  README.md  libbuilder.cmake
HAL/: CMakeLists.txt  MCU.c  SLEEP.c
HAL/include/: HAL.h
LIB/: CMakeLists.txt
Profile/: CMakeLists.txt  devinfoservice.c
Profile/include/: devinfoservice.h
Startup/: CMakeLists.txt  startup_CH583.S
StdPeriphDriver/: CMakeLists.txt
StdPeriphDriver/adc/: CH58x_adc.c  CMakeLists.txt
StdPeriphDriver/adc/include/: CH58x_adc.h
StdPeriphDriver/clk/: CMakeLists.txt
StdPeriphDriver/flash/: CMakeLists.txt
StdPeriphDriver/flash/include/: CH58x_flash.h
StdPeriphDriver/gpio/: CH58x_gpio.c  CMakeLists.txt
StdPeriphDriver/gpio/include/: CH58x_gpio.h
StdPeriphDriver/i2c/: CMakeLists.txt
StdPeriphDriver/pwm/: CMakeLists.txt
StdPeriphDriver/pwr/: CH58x_pwr.c  CMakeLists.txt
StdPeriphDriver/pwr/include/: CH58x_pwr.h
StdPeriphDriver/spi/: CH58x_spi0.c  CMakeLists.txt
StdPeriphDriver/spi/include/: CH58x_spi.h
StdPeriphDriver/sys/: CMakeLists.txt
StdPeriphDriver/timer/: CMakeLists.txt
StdPeriphDriver/uart/: CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CMakeLists.txt
StdPeriphDriver/uart/include/: CH58x_uart.h
StdPeriphDriver/usbdev/: CMakeLists.txt
StdPeriphDriver/usbdev/include/: CH58x_usbdev.h
StdPeriphDriver/usbhost/: CH58x_usb2hostBase.c  CH58x_usbhostBase.c  CMakeLists.txt
StdPeriphDriver/usbhost/include/: CH58x_usbhost.h
broadcaster/: CMakeLists.txt  broadcaster.c
src/: main.c
